feat(homepage): add landing page html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,13 +23,11 @@
                 <li>View message history</li>
                 <li>Get read receipts</li>
                 <li>Receive notifications</li>
-                <li>Search for users</li>
-                <li>Secure messaging</li>
             </ul>
         </section>
 
         <div class="chat">
-            <a class="btn">Start Chatting</a>
+            <a href="chat.html" class="btn">Start Chatting</a>
         </div>
     </div>
     
