feat(screen): add sing up screen

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,8 +26,8 @@
             </ul>
         </section>
 
-        <div class="chat">
-            <a href="chat.html" class="btn">Start Chatting</a>
+        <div class="login">
+            <a href="login.html" class="btn">Sign Up / Login</a>
         </div>
     </div>
     
