feat(page): update landing page UI and layout

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -127,11 +127,8 @@
             <input type="password" id="confirm-password" placeholder="Confirm your password">
         </div>
 
-        <button class="btn-login" onclick="login()">Login</button>
+        <button class="btn-login" onclick="login()">Create Account</button>
 
-        <div class="links">
-            <a href="#">Don't have an account? Sign up</a>
-        </div>
     </div>
 
     <script>
