--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,35 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChatterBox - Modern Real-Time Chat Platform</title>
-    <link rel="stylesheet" href="style.css">
-
-</head>
-<body>
-
-    <div class="container">
-        <header>
-            <h1>ChatterBox</h1>
-            <p class="tagline">Real-Time Chat Messaging</p>
-        </header>
-
-        <section class="features">
-            <ul class="feature-list">
-                <li>Send private messages</li>
-                <li>Create group chats</li>
-                <li>Share images and files</li>
-                <li>View message history</li>
-                <li>Get read receipts</li>
-                <li>Receive notifications</li>
-            </ul>
-        </section>
-
-        <div class="login">
-            <a href="login.html" class="btn">Sign Up / Login</a>
+  </head>
+  <body>
+    <!-- Header -->
+    <header>
+      <nav class="container">
+        <div class="logo">
+          <div class="logo-icon">CB</div>
+          ChatterBox
         </div>
-    </div>
-    
-</body>
+       
+        <a href="signup.html" class="cta-button">Get Started</a>
+      </nav>
+      <link rel="stylesheet" href="style.css">
+
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="container">
+        <h1>Welcome to ChatterBox</h1>
+        <p>A Modern, Secure, Real-Time Chat Messaging Platform</p>
+        <div class="hero-buttons">
+          <a href="signup.html" class="btn btn-primary">Start Chatting</a>
+          <a href="#features" class="btn btn-secondary">Learn More</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="features">
+      <div class="container">
+        <h2 class="section-title">Powerful Features</h2>
+        <div class="features-grid">
+          <div class="feature-card">
+            <div class="feature-icon">💬</div>
+            <h3>Real-Time Messaging</h3>
+            <p>
+              Send and receive messages instantly with our real-time
+              communication system powered by Node.js and Express.
+            </p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-icon">👥</div>
+            <h3>Group Chats</h3>
+            <p>
+              Create group conversations, invite multiple users, and collaborate
+              seamlessly with your team or friends.
+            </p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-icon">📁</div>
+            <h3>Media Sharing</h3>
+            <p>
+              Share images, videos, documents, and files effortlessly within
+              your conversations.
+            </p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-icon">🔒</div>
+            <h3>End-to-End Encryption</h3>
+            <p>
+              Your messages are protected with end-to-end encryption, ensuring
+              complete privacy and security.
+            </p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-icon">🔔</div>
+            <h3>Push Notifications</h3>
+            <p>
+              Never miss a message with real-time push notifications across all
+              your devices.
+            </p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-icon">✓</div>
+            <h3>Read Receipts</h3>
+            <p>
+              Know when your messages are delivered and read with delivery and
+              read receipts.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
