update to start at sign in page instead of sign up

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
           ChatterBox
         </div>
        
-        <a href="signup.html" class="cta-button">Get Started</a>
+        <a href="login.html" class="cta-button">Get Started</a>
       </nav>
       <link rel="stylesheet" href="style.css">
 
@@ -26,7 +26,7 @@
         <h1>Welcome to ChatterBox</h1>
         <p>A Modern, Secure, Real-Time Chat Messaging Platform</p>
         <div class="hero-buttons">
-          <a href="signup.html" class="btn btn-primary">Start Chatting</a>
+          <a href="login.html" class="btn btn-primary">Start Chatting</a>
           <a href="#features" class="btn btn-secondary">Learn More</a>
         </div>
       </div>
