--- a/Presentation/presentation.html
+++ b/Presentation/presentation.html
@@ -93,14 +93,14 @@
          <li>
            <p>
               <a href="https://chatterbox-9e5d6.web.app/chat"
-                >Users must be able to add other users as friends using their email address</a
+                >Users must be able to navigate between pages</a
               >
             </p>
           </li>
           <li>
            <p>
               <a href="https://chatterbox-9e5d6.web.app/chat"
-                >Users must be able to add other users as friends using their email address</a
+                >Users must be able to logout of their account </a
               >
             </p>
           </li>
