remove description from chat and style the popup to look better

--- a/Presentation/presentation.html
+++ b/Presentation/presentation.html
@@ -107,7 +107,7 @@
           <li>
            <p>
               <a href="https://chatterbox-9e5d6.web.app/chat"
-                >Users must be able to add other users as friends using their email address</a
+                >Users must be able to create group chats with other users</a
               >
             </p>
           </li>
