--- a/Presentation/presentation.html
+++ b/Presentation/presentation.html
@@ -114,7 +114,7 @@
           <li>
            <p>
               <a href="https://chatterbox-9e5d6.web.app/chat"
-                >Users must be able to add other users as friends using their email address</a
+                >Users must be able to leave a group chat</a
               >
             </p>
           </li>
