Update landing page

--- a/Presentation/presentation.html
+++ b/Presentation/presentation.html
@@ -33,8 +33,10 @@
         Tue Dec 6 2024
       </time>
       <p>
-        Brief project summary (think WPD1 introduction). You can use this to
-        augment your brief verbal presentation of this part of the presentation.
+        The project focuses on creating a full-stack web-based chat messaging platform that allows
+        real-time messaging, group chats, photo sharing, persistent message history
+        across sessions, and intuitive navigation to allow users to communicate with their friends.
+
       </p>
     </header>
 
