remove dated references to group image

--- a/Presentation/presentation.html
+++ b/Presentation/presentation.html
@@ -111,7 +111,7 @@
           <li>
            <p>
               <a href="https://chatterbox-9e5d6.web.app/chat"
-                >Users must be able to leave a group chat</a
+                >Users must be able to leave and delete a group chat</a
               >
             </p>
           </li>
